@@ -1,14 +1,15 @@
 package com.eazybytes.jobportal.service.impl;
 
+import java.util.List;
+
+import org.springframework.stereotype.Service;
+
 import com.eazybytes.jobportal.dto.CompanyDto;
 import com.eazybytes.jobportal.entity.Company;
 import com.eazybytes.jobportal.repository.CompanyRepository;
 import com.eazybytes.jobportal.service.ICompanyService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -16,14 +17,10 @@ public class CompanyServiceImpl implements ICompanyService {
 
     private final CompanyRepository companyRepository;
 
-//    public CompanyServiceImpl(CompanyRepository companyRepository) {
-//        this.companyRepository = companyRepository;
-//    }
-
     @Override
     public List<CompanyDto> getAllCompanies() {
-        List<Company> companyList =companyRepository.findAll();
-        return companyList.stream().map(this::transformToDto).collect(Collectors.toList());
+        List<Company> companyList = companyRepository.findAll();
+        return companyList.stream().map(this::transformToDto).toList();
     }
 
     private CompanyDto transformToDto(Company company) {
